resolve rescaling issue -> added main wrapper and flex aligned canvas wrapper (style.css)

--- a/public/style.css
+++ b/public/style.css
@@ -1,29 +1,35 @@
-html,
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  touch-action: none;
-  background: #1e1e1e;
-  -webkit-text-size-adjust: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
 * {
   box-sizing: border-box;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  overflow: hidden;
+}
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  touch-action: none;
+  background: #1e1e1e;
+  -webkit-text-size-adjust: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+.main-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  border: 1px solid blue;
 }
 .status-wrapper {
   bottom: 0;
   z-index: 1;
   width: 100%;
   padding: 1em;
-  color: white;
+  color: #e1e1e1;
   position: absolute;
   mix-blend-mode: difference;
 }
@@ -31,7 +37,7 @@ body {
   z-index: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  position: absolute;
-  /* border: 1px solid yellow; */
+  align-self: flex-end;
+  justify-self: flex-end;
+  border: 1px solid yellow;
 }
